changes in the file to update the desktop version

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <nav>
         <div class="toolbar-dark-compact">
 
@@ -28,24 +27,28 @@
                 </ul>
             </div>
     </nav>
-    <section class="portion  ">
-        <img class=" header-icon " src=" img\header-shapes-mobile.png" alt=" ">
-        <h2 id="main_heading"> I'm Mutahar . Glad to see<br> you!</h2>
-        <h2 id="main_heading1">I'm Mutahar.<br>Glad to see you!</h2>
+    <header class="header">
 
-        <div class="paragraph"> I’m a software developer! I can help you <br> build a product , feature or website Look through some of my work <br> and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
-        </div>
-        <div class="paragraph1"> I’m a software developer! I can help you build a product , feature or website Look through <br> some of my work and experience! If you like what you see and have a project you need <br> coded, don’t hesitate to contact me. </div>
-        <div class=" descryption_content"></div>
-        <button id="first_btn">Let's Connect </button>
-        <div class=" social_icons">
-            <img class="Vector" src="img\vector-3.svg" alt="no image">
-            <img class="linkedin-icon" src="img\linkedin-icon.svg" alt="no image">
-            <img class="img" src="img\vector-1.svg" alt="no image">
-            <img class="Vector-2" src="img\vector-2.svg" alt="no image">
-            <img class="Vector-3" src="img\vector.svg " alt=" no image">
-        </div>
-    </section>
+        <section class="portion  ">
+            <!-- <img class=" header-icon " src=" img\header-shapes-mobile.png" alt=" "> -->
+            <img class="header-icon1" src="img/desk_eclipse.svg" alt="">
+            <h2 id="main_heading"> I'm Mutahar . Glad to see<br> you!</h2>
+            <h2 id="main_heading1">I'm Mutahar.<br>Glad to see you!</h2>
+
+            <div class="paragraph"> I’m a software developer! I can help you <br> build a product , feature or website Look through some of my work <br> and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+            </div>
+            <div class="paragraph1"> I’m a software developer! I can help you build a product , feature or website Look through <br> some of my work and experience! If you like what you see and have a project you need <br> coded, don’t hesitate to contact me. </div>
+            <div class=" descryption_content"></div>
+            <button id="first_btn">Let's Connect </button>
+            <div class=" social_icons">
+                <img class="Vector" src="img\vector-3.svg" alt="no image">
+                <img class="linkedin-icon" src="img\linkedin-icon.svg" alt="no image">
+                <img class="img" src="img\vector-1.svg" alt="no image">
+                <img class="Vector-2" src="img\vector-2.svg" alt="no image">
+                <img class="Vector-3" src="img\vector.svg " alt=" no image">
+            </div>
+        </section>
+    </header>
     <section>
         <div class="portion_2_desktop">
             <div class="grid-item"><img class="snapshot_porfolio_img" src="img\sc_de_1.svg" alt="Portfolio_Pic_1">
@@ -59,7 +62,7 @@
                     <span><img src="img\dot.svg" alt=""> 2023 </span>
                 </div>
                 <div class="sec_2_content">
-                    <p>A daily selection of privately personalized reads; no acco- <br> unts or sign-ups required.</p>
+                    <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
                 <div class="tags">
                     <span>HTML</span>
@@ -156,7 +159,8 @@
                     <span><img src="img\dot.svg" alt=""> 2015 </span>
                 </div>
                 <div class="sec_2_content">
-                    <p>Exploring the future of media in Facebook's first Virtual Reality <br> app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
+                    <p>Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear.</p>
+
                 </div>
                 <div class="tags">
                     <span>HTML</span>
@@ -289,7 +293,6 @@
         <!-- Content for the first column -->
         <div class="column1">
             <h1 id="title">About Myself</h1>
-            <div class="h_content">Hello I’m a software developer! I can help you build a product, feature, or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
             <div class="h_content1">Hello I’m a software developer! I can help you build a product, feature, or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</div>
 
             <button id="btn_1">LET'S CONNECT </button>
@@ -322,6 +325,7 @@
 
     <footer>
         <div class="contact_form_container">
+            <img class="header-icon2" src="img/contacts.svg" alt="">
             <div class="container_content">
                 <h1>Contact me</h1>
                 <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it!</p>
