updated the final version of all versions

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="header">
 
         <section class="portion  ">
-            <!-- <img class=" header-icon " src=" img\header-shapes-mobile.png" alt=" "> -->
+            <img class=" header-icon " src=" img\header-shapes-mobile.png" alt=" ">
             <img class="header-icon1" src="img/desk_eclipse.svg" alt="">
             <h2 id="main_heading"> I'm Mutahar . Glad to see<br> you!</h2>
             <h2 id="main_heading1">I'm Mutahar.<br>Glad to see you!</h2>
@@ -64,6 +64,10 @@
                 <div class="sec_2_content">
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
+                <div class="sec_2_content2">
+                    <p>A daily selection of privately personalized reads; no accounts <br> or sign-ups required.</p>
+                </div>
+
                 <div class="tags">
                     <span>HTML</span>
                     <span>CSS</span>
