just add the link of my profile picture as an icon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website </title>
+    <link rel="shortcut icon" href="img/WhatsApp Image 2023-09-11 at 12.52.07 PM.jpeg" type="image/x-icon">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
