--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="">
                 <img class="snapshot_porfolio_img" src="img\snapshot2.png" alt="Portfolio_Pic_1">
             </div>
-            <h1>Tonic</h1>
+            <h1>Multi-Post Stories</h1>
             <div class="Details">
                 <span> CANOPY</span>
                 <span class="counter"></span>
@@ -232,7 +232,7 @@
         <div class="">
             <img class="snapshot_porfolio_img" src="img\snapshot4.png" alt="Portfolio_Pic_1">
         </div>
-        <h1>Tonic</h1>
+        <h1>Multi-Post Stories</h1>
         <div class="Details">
             <span> CANOPY</span>
             <span class="counter"></span>
