--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
     <section>
         <div class="portion_2">
-            <img class="snapshot_porfolio_img" src="img\snapshot2.png" alt="Portfolio_Pic_1">
+            <img class="snapshot_porfolio_img" src="img\picture.svg" alt="Portfolio_Pic_1">
 
             <h1>Tonic</h1>
             <div class="Details">
